--- a/index.html
+++ b/index.html
@@ -1,3 +1,148 @@
-we started the automation using the jenkins
-hi this is chetan this is my first web hosting
-hiii how are you
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chetan IT Solutions</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        /* Header Section */
+        .header {
+            background-color: #2c3e50;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .header h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+
+        /* Navigation Bar */
+        .navbar {
+            display: flex;
+            justify-content: center;
+            background-color: #34495e;
+        }
+
+        .navbar a {
+            color: #fff;
+            text-decoration: none;
+            padding: 14px 20px;
+            display: block;
+        }
+
+        .navbar a:hover {
+            background-color: #2980b9;
+        }
+
+        /* Main Content */
+        .main-content {
+            padding: 40px;
+            text-align: center;
+        }
+
+        .main-content h2 {
+            font-size: 28px;
+        }
+
+        .main-content p {
+            font-size: 18px;
+            margin: 20px 0;
+        }
+
+        /* Services Section */
+        .services {
+            display: flex;
+            justify-content: space-around;
+            margin: 40px 0;
+        }
+
+        .service-box {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 20px;
+            width: 30%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .service-box h3 {
+            font-size: 22px;
+        }
+
+        .service-box p {
+            font-size: 16px;
+        }
+
+        /* Footer Section */
+        .footer {
+            background-color: #2c3e50;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .footer p {
+            margin: 0;
+            font-size: 14px;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Header Section -->
+    <div class="header">
+        <h1>Welcome to Chetan IT Solutions</h1>
+        <p>Your trusted partner in IT infrastructure and system security</p>
+    </div>
+
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a href="#about">About Us</a>
+        <a href="#contact">Contact</a>
+    </div>
+
+    <!-- Main Content Section -->
+    <div class="main-content" id="home">
+        <h2>Expert IT Solutions for Modern Businesses</h2>
+        <p>At Chetan IT Solutions, we provide cutting-edge technology services to help businesses thrive in the digital era.</p>
+    </div>
+
+    <!-- Services Section -->
+    <div class="services" id="services">
+        <div class="service-box">
+            <h3>IT Infrastructure</h3>
+            <p>We design and implement robust IT infrastructures that scale with your business needs.</p>
+        </div>
+        <div class="service-box">
+            <h3>System Security</h3>
+            <p>Protect your data and digital assets with our top-notch security solutions.</p>
+        </div>
+        <div class="service-box">
+            <h3>Cloud Solutions</h3>
+            <p>Leverage the power of cloud computing to enhance efficiency and reduce costs.</p>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer">
+        <p>&copy; 2024 Chetan IT Solutions. All rights reserved.</p>
+    </div>
+
+</body>
+</html>
+
